Add local caching w/ IndexedDB

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-indexed-db": "^1.0.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
