View/hide description, new yaml parser

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.3",
-    "yamljs": "^0.3.0"
+    "yaml": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
