--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.13.1",
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-indexed-db": "^1.0.12",
     "react-loading-skeleton": "^2.0.1",
     "react-router-dom": "^5.2.0",
