--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.3",
+    "react-toggle": "^4.1.1",
     "yaml": "^1.10.0"
   },
   "scripts": {
