--- a/src/data/popularApps.json
+++ b/src/data/popularApps.json
@@ -106,5 +106,11 @@
     "name": "Tweeten",
     "id": "MehediHassan.Tweeten",
     "path": "MehediHassan/Tweeten"
+  },
+  "sharex": {
+    "img": "sharex.webp",
+    "name": "ShareX",
+    "id": "ShareX.ShareX",
+    "path": "ShareX/ShareX"
   }
 }
