--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fuzzysort": "^1.1.4",
     "next": "9.4.4",
     "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-debounce-input": "^3.2.2",
     "react-dom": "16.13.1",
