--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "fuse.js": "^6.0.3",
     "fuzzysort": "^1.1.4",
+    "moment": "^2.26.0",
     "next": "9.4.4",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
