--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-debounce-input": "^3.2.2",
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
+    "react-loading-skeleton": "^2.0.1",
     "react-scripts": "3.4.1",
     "react-toggle": "^4.1.1",
     "yaml": "^1.10.0"
