--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "fuse.js": "^6.0.3",
     "fuzzysort": "^1.1.4",
     "next": "9.4.4",
+    "next-auth": "^2.2.0",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-debounce-input": "^3.2.2",
     "react-dom": "16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-icons": "^3.10.0",
     "react-lazyload": "^2.6.7",
     "react-loading-skeleton": "^2.0.1",
