--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next export"
+  },
+  "devDependencies": {
+    "react-beautiful-dnd": "^13.0.0"
   }
 }
