--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fuzzysort": "^1.1.4",
     "next": "9.4.4",
     "next-auth": "^2.2.0",
+    "next-pwa": "^3.1.3",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
     "react": "16.13.1",
