--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^3.10.0",
     "react-lazyload": "^2.6.7",
     "react-loading-skeleton": "^2.0.1",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.1",
     "react-toggle": "^4.1.1",
     "yaml": "^1.10.0"
