--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "fuse.js": "^6.0.3",
     "fuzzysort": "^1.1.4",
-    "next": "9.4.4",
+    "next": "^9.5.3",
     "next-auth": "^3.1.0",
     "next-pwa": "^3.1.3",
     "node-sass": "^4.14.1",
