--- a/data/popularApps.json
+++ b/data/popularApps.json
@@ -14,14 +14,14 @@
   "vscode": {
     "img": "code.webp",
     "name": "Visual Studio Code",
-    "_id": "Microsoft.VisualStudioCode-User-x64",
-    "path": "Microsoft/VisualStudioCode-User-x64"
+    "_id": "Microsoft.VisualStudioCode.User-x64",
+    "path": "Microsoft/VisualStudioCode/User-x64"
   },
   "vscode-insiders": {
     "img": "code-insiders.webp",
     "name": "Visual Studio Code - Insiders",
-    "_id": "Microsoft.VisualStudioCodeInsiders-User-x64",
-    "path": "Microsoft/VisualStudioCodeInsiders-User-x64"
+    "_id": "Microsoft.VisualStudioCodeInsiders.User-x64",
+    "path": "Microsoft/VisualStudioCodeInsiders/User-x64"
   },
   "chrome": {
     "img": "chrome.webp",
