--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "dependencies": {
     "fuse.js": "^6.0.3",
-    "next": "^10.1.3",
+    "next": "^12.0.8",
     "next-auth": "^4.1.2",
     "next-pwa": "^3.1.3",
-    "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
-    "react": "16.13.1",
+    "react": "^17.0.2",
     "react-debounce-input": "^3.2.2",
     "react-dom": "16.13.1",
     "react-hook-form": "^5.7.2",
@@ -28,6 +27,8 @@
     "export": "next export"
   },
   "devDependencies": {
-    "react-beautiful-dnd": "^13.0.0"
+    "@types/react": "^17.0.38",
+    "react-beautiful-dnd": "^13.0.0",
+    "sass": "^1.49.0"
   }
 }
